core/testData/annotator/perl/unreachableCommaSequenceParens.code
sub some{
    (some(), return);
    say '<error descr="Unreachable code">hi</error>';
}
